--- a/index.html
+++ b/index.html
@@ -1,7 +1,2 @@
 <title>Typer Demo  </title>
-<h1>Typer.js is
-  <span class="typer" id="main" data-words="great,fun,lightweight,easy" data-colors="white" data-delay="100" data-deleteDelay="1000"></span>
-  <span class="cursor" data-owner="main"></span>
-</h1>
-<p>the typing effect with a pure HTML interface</p>
-<script src="https://github.com/RossMdevs/TyperJS/blob/master/typer.js"></script>
+<h1>DEMO DOWN</h1>
